fixed pop in of r3f by css'ing the visibiliti of the element

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,17 @@ h1 {
 }
 .letterO {
   color: var(--cp-dYellow);
+  animation-name: unyellow;
+  animation-duration: 0.3s;
+}
+
+@keyframes unyellow {
+  0% {
+    color: var(--cp-lYellow);
+  }
+  100% {
+    color: var(--cp-dYellow);
+  }
 }
 .firstName {
   position: relative;
